# auwo_ws

./: .gitignore  README.md  flight_search_HEL_LHE.ipynb  ros-jazzy-controller-manager_4.42.2-1noble.20260126.195504_amd64.deb
.cursor/rules/: auwo-github-commit.mdc  ros-jazzy-gazebo-harmonic.mdc
.cursor/skills/ros2-jazzy-gazebo-harmonic/: SKILL.md
rosbags/rosbag2_2026_04_28-13_08_20/: metadata.yaml
scripts/: list_gz_sensor_topics.sh
src/auwo_excavator_description/: CMakeLists.txt  README.md  model.config  package.xml
src/auwo_excavator_description/launch/: gazebo.launch.py  view_rviz.launch.py  view_rviz_sim.launch.py
src/auwo_excavator_description/urdf/: excavator.urdf.xacro
src/excavator_cycle/: package.xml
src/excavator_cycle/scripts/: excavator_cycle.py
src/excavator_description/: CMakeLists.txt  README.md  package.xml
src/excavator_description/config/: auwo_physical_twin.rviz  auwo_twin.rviz  controllers.yaml  view.rviz
src/excavator_description/meshes/truck/: README.md
src/excavator_description/models/excavation_site/: README.md  model.config  model.sdf
src/excavator_description/models/excavation_site/meshes/: excavation_pit.stl
src/excavator_description/models/pete_environment/: model.config  model.sdf
src/excavator_description/scripts/: membrane_points_to_pit_stl.py
src/excavator_description/urdf/: excavator.urdf  excavator.urdf.xacro  truck.urdf.xacro
src/excavator_description/urdf/excavator/: excavator.usd
src/excavator_description/urdf/excavator/configuration/: excavator_base.usd  excavator_physics.usd  excavator_robot.usd  excavator_sensor.usd
src/excavator_description/worlds/: empty.sdf  excavation_site.sdf  excavation_site_local.sdf
src/excavator_gazebo/: CMakeLists.txt  package.xml
src/excavator_gazebo/config/: clock_bridge.yaml  sensors_bridge.yaml
src/excavator_gazebo/launch/: gazebo.launch.py
src/excavator_gazebo/scripts/: imu_to_pose.py  points_frame_remap.py  publish_robot_descriptions.py  spawn_controller_safe.sh
src/excavator_interactive_rviz/: CMakeLists.txt  package.xml
src/excavator_interactive_rviz/config/: physical_tf_follower.yaml
src/excavator_interactive_rviz/launch/: auwo_physical_twin.launch.py  auwo_twin.launch.py
src/excavator_interactive_rviz/scripts/: joint_imarkers.py  physical_tf_follower_node.py  robot_description_topics.py  twin_router_node.py
src/excavator_interactive_rviz/src/: preset_poses_panel.cpp
src/excavator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/excavator_moveit_config/config/: excavator.srdf  excavator_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml
src/excavator_moveit_config/isaac-sim/: excavator_ros2_control.usd
src/excavator_moveit_config/launch/: bucket_moveit.launch.py  demo_moveit_rviz.launch.py  gdb_settings.gdb  move_group.launch.py  moveit_rviz.launch.py
src/excavator_moveit_config/scripts/: auwo_debug_session_probe.py  publish_truck_collision_object.py  wait_for_arm_trajectory_action.py
src/excavator_teleop/: CMakeLists.txt  package.xml
src/excavator_teleop/scripts/: teleop_excavator.py  trajectory_command_adapter.py
src/novatron_xsite3d_interface/: README.md  package.xml  setup.cfg  setup.py
src/novatron_xsite3d_interface/config/: novatron_params.yaml
src/novatron_xsite3d_interface/novatron_xsite3d_interface/: kinematic_results_publisher_node.py
src/novatron_xsite3d_interface/novatron_xsite3d_interface/data/: tf.txt
src/novatron_xsite3d_interface/novatron_xsite3d_interface/fb/: KinematicResults.fbs  TypeDefs.fbs  __init__.py  generata_flatbuffer_schema
src/novatron_xsite3d_interface/novatron_xsite3d_interface/fb/xcrtipcmsg/fb/: Heading.py  KinematicData.py  KinematicDataResult.py  KinematicQualityValue.py  Position.py  Quat.py  Scalar.py  Vector2.py  Vector3.py  Vector3d.py
src/truck_description/: CMakeLists.txt  package.xml
src/truck_description/urdf/: truck.urdf.xacro
